--- a/layout/assets/styles/simSoDep.css
+++ b/layout/assets/styles/simSoDep.css
@@ -24,7 +24,8 @@
     flex-direction: row;
     -webkit-flex-direction: row;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 10px 0 15px 0;
+    ;
 }
 
 .simNumber .number {
@@ -142,7 +143,7 @@ div.registerInfo {
     display: -webkit-flex;
     flex-direction: column;
     -webkit-flex-direction: column;
-    margin: 40px 0px;
+    margin: 30px 0px;
     font-family: "Montserrat";
 }
 
